[package]
name = "fortnite_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features=["json"]}
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
winapi = { version = "0.3", features = ["winuser"] }
