[package]
name = "fortnite_launcher"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features=["json"]}
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
epic_manifest_parser_rs = "0.1.7"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]